--- a/01/Tarea_1_CC6205_Natural_Language_Processing.ipynb
+++ b/01/Tarea_1_CC6205_Natural_Language_Processing.ipynb
@@ -182,7 +182,7 @@
     "id": "rtaQ_aVE8LhH"
    },
    "source": [
-    "> tf-idf scoring model"
+    "> El método clásico que permite rankear las similitudes entre documentos es el modelo *Bag of Words and TF-IDF*. Dicho modelo representa las textos como vectores. Los vectores tienen una dimensión igual al tamaño del vocabulario utilizado por el modelo y cada columna de dichos vectores representa una palabra del vocabulario del modelo. Así, dado un texto y su vector, dicho vector contiene la información de las palabras del vocabulario que están presentes en el texto asociado al vector. Un problema de estas representaciones es que se pierde la información sobre dónde se encuentras las palabras que están presenten en el texto."
    ]
   },
   {
@@ -226,7 +226,7 @@
     ">\n",
     "> Por el otro lado, algunas desventajas:\n",
     "> - Cuando se representan un texto como vector y se almacena la información respecto a qué palabras se hayan en dicho texto, se pierde la información *espacial* de dicho texto, es decir,la representación vectorial no contiene información sobre *dónde* se encontraban las palabras presentes en el texto.\n",
-    "> Es *explotable* en el sentido de que se puede engañar al modelo  usando términos que se refieren a una palabra pero no de forma explícita. Por ejemplo, si se quisiera que la palabra *política* no sea identifica en el texto, se podría cambiar dicha palabra por las \"P O L I T I C A\", \"p0l1t1c4\", \"politika\", entre otras infinitas variaciones de dicha palabra. \n"
+    "> - Es *explotable* en el sentido de que se puede engañar al modelo  usando términos que se refieren a una palabra pero no de forma explícita. Por ejemplo, si se quisiera que la palabra *política* no sea identifica en el texto, se podría cambiar dicha palabra por las \"P O L I T I C A\", \"p0l1t1c4\", \"politika\", entre otras infinitas variaciones de dicha palabra. \n"
    ]
   },
   {
