--- a/01/Tarea_1_CC6205_Natural_Language_Processing.ipynb
+++ b/01/Tarea_1_CC6205_Natural_Language_Processing.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# **Tarea 1 - CC6205 Natural Language Processing 📚**\n",
     "\n",
-    "**Integrantes:**\n",
+    "**Integrantes:** Nicolas Lemuñir y Matías Seda\n",
     "\n",
     "**Fecha límite de entrega 📆:** Lunes 29 de Marzo.\n",
     "\n",
