--- a/competencias/01/Assignment_1.ipynb
+++ b/competencias/01/Assignment_1.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:20.587160Z",
@@ -364,7 +364,8 @@
     "from sklearn.pipeline import Pipeline, FeatureUnion\n",
     "from sklearn.metrics import confusion_matrix, cohen_kappa_score, classification_report, accuracy_score, roc_auc_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.base import BaseEstimator, TransformerMixin"
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from nltk import TweetTokenizer"
    ]
   },
   {
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:20.604066Z",
@@ -458,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.068137Z",
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.088707Z",
@@ -540,39 +541,39 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>516</th>\n",
-       "      <td>10516</td>\n",
-       "      <td>@StrongestBeing ←would furrow and her face wou...</td>\n",
-       "      <td>anger</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>273</th>\n",
-       "      <td>10273</td>\n",
-       "      <td>Inpouring this letter we are dying over agains...</td>\n",
-       "      <td>anger</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>415</th>\n",
-       "      <td>10415</td>\n",
-       "      <td>I think they may be #offended</td>\n",
-       "      <td>anger</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573</th>\n",
-       "      <td>10573</td>\n",
-       "      <td>@TDsNation I blame how broken madden is this year</td>\n",
-       "      <td>anger</td>\n",
-       "      <td>medium</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>796</th>\n",
-       "      <td>10796</td>\n",
-       "      <td>630am meeting Olympic House #10golds24 .  #nev...</td>\n",
+       "      <th>726</th>\n",
+       "      <td>10726</td>\n",
+       "      <td>So Rangers v Celtic ll #revenge</td>\n",
        "      <td>anger</td>\n",
        "      <td>low</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>700</th>\n",
+       "      <td>10700</td>\n",
+       "      <td>@The_Nasty_P now you gotta do that with fast n...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>615</th>\n",
+       "      <td>10615</td>\n",
+       "      <td>@StarFlowerz17 @DreamerAbe #bitter. Nicole and...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>568</th>\n",
+       "      <td>10568</td>\n",
+       "      <td>@SageHillfarms @HintonAlisa @hb_heather Hey, J...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>medium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>288</th>\n",
+       "      <td>10288</td>\n",
+       "      <td>luv seeing a man with a scowl on his face walk...</td>\n",
+       "      <td>anger</td>\n",
+       "      <td>medium</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -580,21 +581,21 @@
       ],
       "text/plain": [
        "        id                                              tweet  class  \\\n",
-       "516  10516  @StrongestBeing ←would furrow and her face wou...  anger   \n",
-       "273  10273  Inpouring this letter we are dying over agains...  anger   \n",
-       "415  10415                      I think they may be #offended  anger   \n",
-       "573  10573  @TDsNation I blame how broken madden is this year  anger   \n",
-       "796  10796  630am meeting Olympic House #10golds24 .  #nev...  anger   \n",
+       "726  10726                    So Rangers v Celtic ll #revenge  anger   \n",
+       "700  10700  @The_Nasty_P now you gotta do that with fast n...  anger   \n",
+       "615  10615  @StarFlowerz17 @DreamerAbe #bitter. Nicole and...  anger   \n",
+       "568  10568  @SageHillfarms @HintonAlisa @hb_heather Hey, J...  anger   \n",
+       "288  10288  luv seeing a man with a scowl on his face walk...  anger   \n",
        "\n",
        "    sentiment_intensity  \n",
-       "516              medium  \n",
-       "273              medium  \n",
-       "415              medium  \n",
-       "573              medium  \n",
-       "796                 low  "
+       "726                 low  \n",
+       "700              medium  \n",
+       "615              medium  \n",
+       "568              medium  \n",
+       "288              medium  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -656,37 +657,37 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>163</th>\n",
-       "      <td>11104</td>\n",
-       "      <td>@inthefade going back to blissful ignorance?!</td>\n",
+       "      <th>661</th>\n",
+       "      <td>11602</td>\n",
+       "      <td>@simondawkins23 @Titchlar81 clicked the wrong ...</td>\n",
        "      <td>anger</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>748</th>\n",
-       "      <td>11689</td>\n",
-       "      <td>@AshitaNoJoe55 i m not a big fan of @mkatju , ...</td>\n",
+       "      <th>343</th>\n",
+       "      <td>11284</td>\n",
+       "      <td>Marcus Rojo is the worst player i have ever se...</td>\n",
        "      <td>anger</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>523</th>\n",
-       "      <td>11464</td>\n",
-       "      <td>@Blewberry02CP Content updates provoke that in...</td>\n",
+       "      <th>125</th>\n",
+       "      <td>11066</td>\n",
+       "      <td>I don't like pineapple I only eat them on pizz...</td>\n",
        "      <td>anger</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>286</th>\n",
-       "      <td>11227</td>\n",
-       "      <td>smh customers getting angry at me bc i aint go...</td>\n",
+       "      <th>159</th>\n",
+       "      <td>11100</td>\n",
+       "      <td>@NJDDanin123 I personally liked #relentless …d...</td>\n",
        "      <td>anger</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>290</th>\n",
-       "      <td>11231</td>\n",
-       "      <td>Being abroad is causing me to make spontaneous...</td>\n",
+       "      <th>609</th>\n",
+       "      <td>11550</td>\n",
+       "      <td>@TalkTalkCare  how on earth can I send an emai...</td>\n",
        "      <td>anger</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -696,21 +697,21 @@
       ],
       "text/plain": [
        "        id                                              tweet  class  \\\n",
-       "163  11104     @inthefade going back to blissful ignorance?!   anger   \n",
-       "748  11689  @AshitaNoJoe55 i m not a big fan of @mkatju , ...  anger   \n",
-       "523  11464  @Blewberry02CP Content updates provoke that in...  anger   \n",
-       "286  11227  smh customers getting angry at me bc i aint go...  anger   \n",
-       "290  11231  Being abroad is causing me to make spontaneous...  anger   \n",
+       "661  11602  @simondawkins23 @Titchlar81 clicked the wrong ...  anger   \n",
+       "343  11284  Marcus Rojo is the worst player i have ever se...  anger   \n",
+       "125  11066  I don't like pineapple I only eat them on pizz...  anger   \n",
+       "159  11100  @NJDDanin123 I personally liked #relentless …d...  anger   \n",
+       "609  11550  @TalkTalkCare  how on earth can I send an emai...  anger   \n",
        "\n",
        "     sentiment_intensity  \n",
-       "163                  NaN  \n",
-       "748                  NaN  \n",
-       "523                  NaN  \n",
-       "286                  NaN  \n",
-       "290                  NaN  "
+       "661                  NaN  \n",
+       "343                  NaN  \n",
+       "125                  NaN  \n",
+       "159                  NaN  \n",
+       "609                  NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.117633Z",
@@ -822,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.128600Z",
@@ -832,7 +833,19 @@
    },
    "outputs": [],
    "source": [
-    "class Lexicon():\n",
+    "import codecs\n",
+    "import numpy as np\n",
+    "from abc import ABC, abstractmethod\n",
+    "import nltk\n",
+    "\n",
+    "\n",
+    "class Feature(ABC):\n",
+    "    @abstractmethod\n",
+    "    def get_feature(self, tweet: list):\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "class Lexicon(Feature):\n",
     "    def __init__(self):\n",
     "        self.lists_words = {}\n",
     "        self.create_list_words(\"positive\")\n",
@@ -847,7 +860,8 @@
     "            list_words = map(lambda x: x.replace(\"\\n\", \"\"), f.readlines())\n",
     "        self.lists_words[word_type] = list(list_words)\n",
     "\n",
-    "    def get_positive_negative_words(self, tweet: list):\n",
+    "    # override\n",
+    "    def get_feature(self, tweet: list):\n",
     "        negative_words = self.lists_words[\"negative\"]\n",
     "        positive_words = self.lists_words[\"positive\"]\n",
     "\n",
@@ -862,8 +876,9 @@
     "        return [positives, negatives]\n",
     "\n",
     "\n",
-    "class ElongatedWords():\n",
-    "    def get_elongated_words(self, tweet: list):\n",
+    "class ElongatedWords(Feature):\n",
+    "    # override\n",
+    "    def get_feature(self, tweet: list):\n",
     "\n",
     "        elongated_words = 0\n",
     "\n",
@@ -882,18 +897,26 @@
     "        return [elongated_words]\n",
     "\n",
     "\n",
-    "class CharsCount():\n",
-    "    def get_relevant_chars(self, tweet: str):\n",
-    "        num_hashtags = tweet.count('#')\n",
-    "        num_exclamations = tweet.count('!')\n",
-    "        num_interrogations = tweet.count('?')\n",
-    "        num_at = tweet.count('@')\n",
+    "class CharsCount(Feature):\n",
+    "    # override\n",
+    "    def get_feature(self, tweet: list):\n",
+    "        num_hashtags = 0\n",
+    "        num_exclamations = 0\n",
+    "        num_interrogations = 0\n",
+    "        num_at = 0\n",
+    "\n",
+    "        for word in tweet:\n",
+    "            num_hashtags += word.count('#')\n",
+    "            num_exclamations += word.count('!')\n",
+    "            num_interrogations += word.count('?')\n",
+    "            num_at += word.count('@')\n",
     "\n",
     "        return [num_hashtags, num_exclamations, num_interrogations, num_at]\n",
     "\n",
     "\n",
-    "class UpperCount():\n",
-    "    def get_upper_words(self, tweet: list):\n",
+    "class UpperCount(Feature):\n",
+    "    # override\n",
+    "    def get_feature(self, tweet: list):\n",
     "        upper_count = 0\n",
     "        for word in tweet:\n",
     "            if word.isupper():\n",
@@ -901,42 +924,41 @@
     "        return [upper_count]\n",
     "\n",
     "\n",
-    "class CustomTransformer(BaseEstimator, TransformerMixin):\n",
-    "    def __init__(self):\n",
-    "        self.lexicon = Lexicon()\n",
-    "        self.elongated_words = ElongatedWords()\n",
-    "        self.chars_count = CharsCount()\n",
-    "        self.upper_count = UpperCount()\n",
-    "\n",
+    "class CustomTransformer(ABC, BaseEstimator, TransformerMixin):\n",
     "    def transform(self, X, y=None):\n",
     "        chars = []\n",
     "\n",
+    "        tokenizer = nltk.TweetTokenizer()\n",
+    "\n",
     "        for tweet in X:\n",
-    "            split_tweet = tweet.split()\n",
+    "            features = []\n",
+    "            split_tweet = tokenizer.tokenize(tweet)\n",
     "\n",
-    "            lexicon = self.lexicon.get_positive_negative_words(split_tweet)\n",
+    "            for class_ in self.classes:\n",
+    "                feature = class_().get_feature(split_tweet)\n",
+    "                features += feature\n",
     "\n",
-    "            elongated_words = self.elongated_words.get_elongated_words(\n",
-    "                    split_tweet\n",
-    "                    )\n",
-    "\n",
-    "            chars_count = self.chars_count.get_relevant_chars(tweet)\n",
-    "\n",
-    "            upper_count = self.upper_count.get_upper_words(split_tweet)\n",
-    "\n",
-    "            vect = lexicon + elongated_words + chars_count + upper_count\n",
-    "\n",
-    "            chars.append(vect)\n",
+    "            chars.append(features)\n",
     "\n",
     "        return np.array(chars)\n",
     "\n",
     "    def fit(self, X, y=None):\n",
-    "        return self"
+    "        return self\n",
+    "\n",
+    "\n",
+    "class AngryTransformer(CustomTransformer):\n",
+    "    def __init__(self):\n",
+    "        self.classes = [\n",
+    "                Lexicon,\n",
+    "                ElongatedWords,\n",
+    "                CharsCount,\n",
+    "                UpperCount\n",
+    "                ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-04-07T15:44:21.145564Z",
@@ -972,7 +994,7 @@
    "source": [
     "# Veamos que sucede si ejecutamos el transformer\n",
     "sample = train['anger'].sample(5, random_state = 1).tweet\n",
-    "sample_features = CustomTransformer().transform(sample)\n",
+    "sample_features = AngryTransformer().transform(sample)\n",
     "\n",
     "# Se puede verificar que el conteo de símbolos es consistente con el transformer creado.\n",
     "print(f'Tweet original: {sample.iloc[0]}')\n",
