T4 has been added

--- a/tareas/03/Tarea_3_Word_Embeddings.ipynb
+++ b/tareas/03/Tarea_3_Word_Embeddings.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# **Tarea 3 - Word Embeddings 📚**\n",
     "\n",
-    "**Integrantes:**\n",
+    "**Integrantes:** Nicolas Lemunñir y Matías Seda\n",
     "\n",
     "**Fecha límite de entrega 📆:** 3 de mayo.\n",
     "\n",
@@ -1141,6 +1141,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nótese que ambos modelos tienen resultados muy similares y lo anterior tiene sentido ya que se cumple la correspondencia entre modelos distribuidos y modelos distribucionales: ambos modelos están basados en la hipótesis distribucional, es decir, ambos capturan la similitud de palabras basándose en la similutd entre los contextos en que ocurren las palabras.\n",
+    "\n",
+    "Ambos modelos podrían ser mejorados agregando las palabras del dataset AFINN que no se encuentran en los vocabularios de los modelos. Teniendo un vocabulario completo, es decir, un vocabulario que incluya todas las palabras del dataset AFINN se esperaría que los resultados mejorasen."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "izppruGQTNct"
    },
@@ -1308,7 +1317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
