--- a/tareas/04/Tarea_4.ipynb
+++ b/tareas/04/Tarea_4.ipynb
@@ -142,13 +142,14 @@
     "\n",
     "**Respuesta:** \n",
     "\n",
-    "Los modelos HMMS, MEMMs y CRFs sirven para etiquetar textos. Por ejemplo, part-of-speech tagging (POS) es una tarea que y Named Entity Recognition (NER) es otra tarea de etiquetado que busca reconcer *entidades* dentro de una oración\n",
+    "Los modelos HMMS, MEMMs y CRFs sirven para etiquetar textos o, más general, asignar etiquetas discretas a elementos discretos. Por ejemplo, tareas de etiquetado como *part-of-speech tagging (POS)* o *Named Entity Recognition (NER)* son tareas que pueden realizar los modelos HMMS, MEMMs y CRF. En particular, respecto al objetivo de las tareas mencionadas, se tiene que *part-of-speech tagging (POS)* busca determinar a que categoría gramatical pertenece cada palabra en un texto y *Named Entity Recognition (NER)* que busca reconcer *entidades* dentro de una oración.\n",
     "\n",
     "#### 2.2. ¿Qué modelos usan features? ¿Qué ventajas conlleva esto? (0.1 pts)\n",
     "\n",
     "**Respuesta:** \n",
     "\n",
-    "`Escriba su respuesta aquí`\n",
+    "Los modelos MEMMs y CRFs usan features. La ventaja de los vectores features es que permiten realizar una representación más completa del texto ya que los vectores features permiten *agregar* conocimiento experto, es decir, los vectores features pertimen codificar *conocimiento* que no está presente en el texto.\n",
+    "\n",
     "\n",
     "#### 2.3. ¿Cómo maneja cada uno de los modelos las palabras con baja frecuencia en el set de train? (0.1 pts)\n",
     "\n",
@@ -160,13 +161,25 @@
     "\n",
     "**Respuesta:** \n",
     "\n",
-    "`Escriba su respuesta aquí`\n",
+    "La probabilidad estimada por el modelo MEMM viene dada por:\n",
+    "\\begin{equation}\n",
+    "P(s_{i} | s_{i-1}, x_{1}, ..., x_{m} ; \\vec{W}) = \\frac{exp(\\vec{W} \\cdot \\vec{\\Phi}(x_{1}, ..., x_{m}, i, s_{i-1}, s_{i}))}{\\sum_{\\hat{s} \\in S} exp(\\vec{W} \\cdot \\vec{\\Phi}(x_{1}, ..., x_{m}, i, s_{i-1}, \\hat{s}))}\n",
+    "\\end{equation}\n",
     "\n",
+    "Por el otro lado, la probabilidad estimada por el modelo CRF viene dada por:\n",
+    "\\begin{equation}\n",
+    "P(s_{1:m} | x_{1:m} ; \\vec{W}) = \\frac{exp(\\vec{W} \\cdot \\vec{\\Phi}(x_{1:m}, s_{1:m}))}{\\sum_{\\hat{s_{1:m}} \\in S^{m}} exp(\\vec{W} \\cdot \\vec{\\Phi}(x_{1:m}, \\hat{s_{1:m}}))}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Nótese que el denominador de la expresión asociada al modelo MEMM es local (la suma presente solo considera una etiquetas *anteriror* a la etiqueta acutal). En cambio, el denominador de la expresión asociada al modelo CRF es global (la suma presente considera todas las posibles sequencias de etiquetas $S_{m}$). Dicha diferencia es la que permite al modelo CRF tomar decisiones globales.\n",
+    "\n",
+    "\n",
+    "Los modelos HMMs no son capaces de tomar decisiones globales ya que realizan un supuesto *markoviano* de segundo orden.\n",
     "#### 2.5 Dado una secuencia de $x_1, ..., x_m$ ¿Cuántas posibles secuencias de etiquetas se pueden generar para un conjunto de etiquetas $S$ con $|S|=k$ ? ¿Analizarlas todas sería computacionalmente tratable? (0.1 pts)\n",
     "\n",
     "**Respuesta:**\n",
     "\n",
-    "`Escriba su respuesta aquí`"
+    "Existen $k^{m}$ posibles secuencias dado una secuencia $x_1, ..., x_m$ y un conjunto de etiquetas $S$ con $|S|=k$. Nótese que el problema es de tiempo exponencial y, por tanto, analizar todas las posibles secuencias de etiquetas no es tratable computacionalmente."
    ]
   },
   {
@@ -229,7 +242,20 @@
    "source": [
     "**Respuesta**\n",
     "\n",
-    "`Escriba su respuesta aquí`"
+    "- Dada la matriz $E$, se tiene que crear los vectores embedding $\\vec{v}$ para las siguientes frases:\n",
+    " - el agua moja\n",
+    " - agua moja y\n",
+    " - moja y el \n",
+    " - y el fuego\n",
+    " - el fuego quema\n",
+    "- Por ejemplo, para la frase `el agua moja`, su vector embedding asociado se crea concatenando los embedding para las palabras: `el`: $(2, 2)$, `agua`: $(0, -2)$ y `moja`: $(0, 1)$. Así, se tiene que el vector embedding para esta frase es: $(2, 2, 0, -2, 0, 1)^{T}$\n",
+    "- Con los vectores embedding creados, para cada vector se debe multiplicar dicho vector por la matriz $U$ y luego aplicar la función de activación, es decir, se debe realizar la siguiente operacion:\n",
+    "\\begin{equation}\n",
+    "\\vec{p} = tanh(\\vec{v}^{T} \\cdot U)\n",
+    "\\end{equation}\n",
+    "- Luego, con todos los vectores $\\vec{p}$ asociados a cada frase, se debe elegir el vector máximo, es decir, para cada posición (dimensión) de los vectores $\\vec{p}$, se debe escoger valor máximo de todos los vectores $\\vec{p}$ para la posición (dimensión) mencionada.\n",
+    "\n",
+    "Nótese que, en este caso, el tamaño de la ventana a usar a 3."
    ]
   },
   {
@@ -567,10 +593,20 @@
    "metadata": {
     "id": "TjSZkBsk1H4f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in links: https://download.pytorch.org/whl/torch_stable.html\n",
+      "Collecting torch==1.8.0+cu111\n",
+      "  Downloading https://download.pytorch.org/whl/cu111/torch-1.8.0%2Bcu111-cp38-cp38-linux_x86_64.whl (1982.2 MB)\n",
+      "\u001b[K     |██████████████████████████████  | 1855.4 MB 8.4 MB/s eta 0:00:168  |▌                               | 33.0 MB 6.5 MB/s eta 0:05:02     |█▋                              | 99.9 MB 3.7 MB/s eta 0:08:23     |██▎                             | 140.4 MB 1.1 MB/s eta 0:28:06     |██▉                             | 174.9 MB 6.1 MB/s eta 0:04:57     |███▎                            | 203.4 MB 6.9 MB/s eta 0:04:17     |███▍                            | 213.0 MB 4.1 MB/s eta 0:07:08     |█████▍                          | 334.8 MB 4.1 MB/s eta 0:06:45     |█████▍                          | 337.2 MB 5.6 MB/s eta 0:04:56     |█████▋                          | 350.2 MB 6.8 MB/s eta 0:04:01     |█████▉                          | 361.1 MB 6.3 MB/s eta 0:04:20     |█████▉                          | 361.6 MB 6.3 MB/s eta 0:04:19     |██████▎                         | 388.8 MB 6.8 MB/s eta 0:03:55     |██████▋                         | 409.5 MB 3.0 MB/s eta 0:08:47     |█████████▍                      | 580.6 MB 2.9 MB/s eta 0:08:10     |█████████▌                      | 588.6 MB 473 kB/s eta 0:49:05     |█████████▌                      | 589.9 MB 473 kB/s eta 0:49:02     |██████████▎                     | 639.2 MB 7.4 MB/s eta 0:03:02     |██████████▊                     | 662.4 MB 6.8 MB/s eta 0:03:15     |███████████▍                    | 707.5 MB 5.1 MB/s eta 0:04:12     |███████████▍                    | 708.3 MB 5.4 MB/s eta 0:03:55     |███████████▉                    | 731.1 MB 3.2 MB/s eta 0:06:32     |███████████▉                    | 734.5 MB 2.5 MB/s eta 0:08:26     |████████████                    | 738.0 MB 2.5 MB/s eta 0:08:24     |████████████▌                   | 775.5 MB 6.1 MB/s eta 0:03:20     |██████████████▉                 | 916.2 MB 4.3 MB/s eta 0:04:07     |██████████████▉                 | 921.6 MB 4.0 MB/s eta 0:04:25     |████████████████▋               | 1028.1 MB 3.3 MB/s eta 0:04:52     |████████████████▊               | 1032.5 MB 6.5 MB/s eta 0:02:27     |█████████████████               | 1052.7 MB 1.3 MB/s eta 0:11:57     |█████████████████               | 1053.6 MB 1.3 MB/s eta 0:11:56     |█████████████████               | 1058.8 MB 2.8 MB/s eta 0:05:35     |█████████████████▉              | 1107.6 MB 5.8 MB/s eta 0:02:30     |██████████████████▉             | 1167.5 MB 15.2 MB/s eta 0:00:54     |██████████████████▉             | 1169.4 MB 8.4 MB/s eta 0:01:37     |█████████████████████▍          | 1322.3 MB 7.9 MB/s eta 0:01:24     |██████████████████████▊         | 1410.7 MB 4.5 MB/s eta 0:02:09     |███████████████████████▏        | 1433.9 MB 2.2 MB/s eta 0:04:09     |███████████████████████▊        | 1466.8 MB 5.0 MB/s eta 0:01:44     |████████████████████████▌       | 1519.1 MB 6.9 MB/s eta 0:01:08     |█████████████████████████▍      | 1576.1 MB 3.7 MB/s eta 0:01:51     |█████████████████████████▌      | 1576.8 MB 3.7 MB/s eta 0:01:51     |██████████████████████████▉     | 1661.9 MB 2.9 MB/s eta 0:01:52"
+     ]
+    }
+   ],
    "source": [
     "# Esto toma su tiempo en ejecutarse\n",
-    "%%capture\n",
     "!pip install torch==1.8.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html\n",
     "!pip install torchtext==0.9.0"
    ]
