--- a/tareas/04/Tarea_4.ipynb
+++ b/tareas/04/Tarea_4.ipynb
@@ -248,7 +248,7 @@
     " - moja y el \n",
     " - y el fuego\n",
     " - el fuego quema\n",
-    "- Por ejemplo, para la frase `el agua moja`, su vector embedding asociado se crea concatenando los embedding para las palabras: `el`: $(2, 2)$, `agua`: $(0, -2)$ y `moja`: $(0, 1)$. Así, se tiene que el vector embedding para esta frase es: $(2, 2, 0, -2, 0, 1)^{T}$\n",
+    "- Por ejemplo, para la frase `el agua moja`, su vector embedding asociado se crea concatenando los embedding para las palabras: `el`: $(2, 2)$, `agua`: $(0, -2)$ y `moja`: $(0, 1)$. Así, se tiene que el vector embedding $\\vec{v}$ para esta frase es: $(2, 2, 0, -2, 0, 1)^{T}$\n",
     "- Con los vectores embedding creados, para cada vector se debe multiplicar dicho vector por la matriz $U$ y luego aplicar la función de activación, es decir, se debe realizar la siguiente operacion:\n",
     "\\begin{equation}\n",
     "\\vec{p} = tanh(\\vec{v}^{T} \\cdot U)\n",
@@ -320,7 +320,16 @@
    "source": [
     "**Respuesta**\n",
     "\n",
-    "`Escriba su respuesta aquí`\n",
+    "El embedding para la frase `el fuego quema` es $(1, 0, -1, 1, 1, 1)$, es decir, se tiene que $\\vec{x}_1 = (1, 0)$, $\\vec{x}_2 = (-1, 1)$ y $\\vec{x}_3 = (1, 1)$. Luego, se tiene que los vectores $\\vec{s}_1, \\vec{s}_2,\\vec{s}_3$ vienen dados por:\n",
+    "- $\\vec{s}_1 = g(\\vec{s}_0 W^{s} + \\vec{x}_{1}W^{x} + \\vec{b}) = g((0,0,0) + (0, 0, 1)) = g((0,0,1))= (0,0,1) $\n",
+    "- $\\vec{s}_2 = g(\\vec{s}_1 W^{s} + \\vec{x}_{2}W^{x} + \\vec{b}) = g((1,1,1) + (1,-1,-1)) = g((2,0,0)) = (2,0,0)$\n",
+    "- $\\vec{s}_3 = g(\\vec{s}_2 W^{s} + \\vec{x}_{3}W^{x} + \\vec{b}) = g((2,0,2) + (1,-1,1)) = g((2,-1,2)) = (2,0,2)$\n",
+    "\n",
+    "Ahora, los vectores $\\vec{y}_1, \\vec{y}_2,\\vec{y}_3$ vienen dados por:\n",
+    "- $\\vec{y}_1 = O_{SRNN}\\left(\\vec{s}_1\\right) = \\vec{s}_1 = (0,0,1)$\n",
+    "- $\\vec{y}_2 = O_{SRNN}\\left(\\vec{s}_2\\right) = \\vec{s}_2 = (2,0,0)$\n",
+    "- $\\vec{y}_3 = O_{SRNN}\\left(\\vec{s}_3\\right) = \\vec{s}_3 = (2,0,2)$\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -374,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -409,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -433,7 +442,7 @@
        " 'Nice to meet you.']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -468,7 +477,7 @@
        " 'Ok, I am with you.']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -491,14 +500,11 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
       "text/plain": [
        "'greeting'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "RfZ6SL-Q1Kwd"
    },
@@ -643,6 +649,26 @@
     "import numpy as np\n",
     "import nltk\n",
     "from nltk.stem.porter import PorterStemmer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Habemus GPU? False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificar si cuda esta disponible en el entorno\n",
+    "print(\"Habemus GPU?\", torch.cuda.is_available())\n",
+    "if torch.cuda.is_available(): # Usar esto para codigo agnostico\n",
+    "    print(\"Cuantas GPUs me regala Google?\", torch.cuda.device_count())"
    ]
   },
   {
