--- a/tareas/04/Tarea_4.ipynb
+++ b/tareas/04/Tarea_4.ipynb
@@ -619,11 +619,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "id": "RfZ6SL-Q1Kwd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tridimensional/u/dcc/noveno/nlp/nlp/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -653,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -695,18 +704,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2022-05-23 02:24:26--  https://raw.githubusercontent.com/dccuchile/CC6104/master/scripts/star_wars_chatbot.json\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+      "--2022-06-20 02:52:32--  https://raw.githubusercontent.com/dccuchile/CC6205/master/assignments/star_wars_chatbot.json\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 14469 (14K) [text/plain]\n",
       "Saving to: ‘star_wars_chatbot.json’\n",
       "\n",
-      "\r",
-      "star_wars_chatbot.j   0%[                    ]       0  --.-KB/s               \r",
-      "star_wars_chatbot.j 100%[===================>]  14.13K  --.-KB/s    in 0.001s  \n",
+      "star_wars_chatbot.j 100%[===================>]  14,13K  --.-KB/s    in 0,005s  \n",
       "\n",
-      "2022-05-23 02:24:26 (15.7 MB/s) - ‘star_wars_chatbot.json’ saved [14469/14469]\n",
+      "2022-06-20 02:52:32 (2,65 MB/s) - ‘star_wars_chatbot.json’ saved [14469/14469]\n",
       "\n"
      ]
     }
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -731,7 +738,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "97lines [00:00, 64517.52lines/s]\n"
+      "97lines [00:00, 42583.99lines/s]\n"
      ]
     }
    ],
@@ -762,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "n-vQ24tMJG5H"
    },
@@ -773,14 +780,61 @@
     "    def __init__(self, vocab_size, embed_dim=32, num_classes=10, \n",
     "                 use_cnn=False, cnn_pool_channels=24, cnn_kernel_size=3):\n",
     "      super().__init__()\n",
-    "      pass\n",
+    "    \n",
+    "      self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
+    "\n",
+    "      self.use_cnn = use_cnn\n",
+    "\n",
+    "      if self.use_cnn:\n",
+    "        # capa de convolución\n",
+    "        self.conv = nn.Conv1d(\n",
+    "            in_channels=1,\n",
+    "            out_channels=cnn_pool_channels,\n",
+    "            kernel_size=cnn_kernel_size * embed_dim,\n",
+    "            stride=embed_dim,\n",
+    "            )\n",
+    "        fc_in_size = cnn_pool_channels\n",
+    "        \n",
+    "        # capa lineal\n",
+    "        self.fc = nn.Linear(fc_in_size, num_classes)\n",
+    "        self.init_weights()\n",
+    "      else:\n",
+    "        self.fc = nn.Linear(embed_dim, num_classes)\n",
     "\n",
     "    def init_weights(self):\n",
     "      # Esto puede ser util para inicializar los pesos\n",
-    "      pass\n",
+    "      initrange = 0.5\n",
+    "      self.embedding.weight.data.uniform_(-initrange, initrange)\n",
+    "      self.fc.weight.data.uniform_(-initrange, initrange)\n",
+    "      self.fc.bias.data.zero_()\n",
     "\n",
     "    def forward(self, text, offsets):\n",
-    "      pass"
+    "      text = torch.tensor(\n",
+    "          list(\n",
+    "              zip(\n",
+    "                  *zip_longest(\n",
+    "                      *([text[o:offsets[i+1]] for i, o in enumerate(offsets[:-1])] + [text[offsets[-1]:len(texts)]]), \n",
+    "                      fillvalue=vocab[\"<pad>\"]\n",
+    "                  )\n",
+    "              )\n",
+    "          )\n",
+    "      ).to(text.device)\n",
+    "\n",
+    "      h = self.embedding(text)\n",
+    "      if self.use_cnn:\n",
+    "        # (N x longest_text x embed_dim)\n",
+    "\n",
+    "\n",
+    "        # (N x pool_channels)\n",
+    "        h = h.view(h.size(0), 1, -1)\n",
+    "        h = torch.relu(self.conv(h))\n",
+    "        h = h.mean(dim=2)\n",
+    "\n",
+    "        # (N x num_classes)\n",
+    "        return self.fc(h)\n",
+    "      else:\n",
+    "        h = h.mean(dim=1)\n",
+    "        return self.fc(h)"
    ]
   },
   {
@@ -794,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "K1AZpXc7JxTa"
    },
@@ -802,7 +856,12 @@
    "source": [
     "# Defina su función de BATCH\n",
     "def generate_batch(batch):\n",
-    "  pass"
+    "  label = torch.tensor([entry[0] for entry in batch])\n",
+    "  texts = [tokenizer(entry[1]) for entry in batch]\n",
+    "  offsets = [0] + [len(text) for text in texts]\n",
+    "  offsets = torch.tensor(offsets[:-1]).cumsum(dim=0)\n",
+    "  big_text = torch.cat([torch.tensor([vocab.stoi[t] for t in text]) for text in texts])\n",
+    "  return big_text, offsets, label"
    ]
   },
   {
@@ -816,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -829,9 +888,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU is avaible: cuda\n",
+      "GPU is avaible: cpu\n",
       "train: 97 elements\n",
-      "Epoch: 1000 \t iter-Loss: 0.003final loss: 0.0032\n"
+      "Epoch: 1000 \t iter-Loss: 0.001final loss: 0.0012\n"
      ]
     }
    ],
@@ -889,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -901,14 +960,11 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic+json": {
-       "type": "string"
-      },
       "text/plain": [
        "'funny'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -989,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1003,12 +1059,30 @@
      "output_type": "stream",
      "text": [
       "Let's chat! (type 'finish_chat' to finish the chat)\n",
-      "You: hi\n",
-      "GA-97: Yes, I am here.\n",
-      "You: can you tell me a joke?\n",
-      "GA-97: Have you tried the gluten-free Wookiee treats? No, but I heard they are a little Chewy.\n",
-      "You: exit\n",
-      "GA-97: Hello Dear\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What do you need to reroute droids? R2-Detour.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What’s Yoda’s advice for going to the bathroom? Doo-doo or doo-doo-not-do.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: Which Jedi became a rock star? Bon Jovi-Wan Kenobi.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What’s Yoda’s advice for going to the bathroom? Doo-doo or doo-doo-not-do.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: How does Darth Vader like his toast? On the Dark Side.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What did Han Solo say to the waiter who recommended the haddock?, Never sell me the cods!\n",
+      "You: Do you know any joke?\n",
+      "GA-97: Why was the droid angry? Because people kept pushing its buttons.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What do you call a rebel princess who only shops at Whole Foods? Leia Organic.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: Which Jedi became a rock star? Bon Jovi-Wan Kenobi.\n",
+      "You: Do you know any joke?\n",
+      "GA-97: Which program do Jedi use to open PDF files? Adobe-Wan Kenobi\n",
+      "You: Do you know any joke?\n",
+      "GA-97: What did Han Solo say to the waiter who recommended the haddock?, Never sell me the cods!\n",
       "You: finish_chat\n"
      ]
     }
